2021-01-18         Manuel Collado        <m-collado@users.sourceforge.net>

	* makeweb.sh: Detect errors and give messages.

2021-01-13         Manuel Collado        <m-collado@users.sourceforge.net>

	* Development_web: Minor documentation updates.
	* makeweb.sh: Remove the fake ..html file if it exists.

2018-04-09         Manuel Collado       <m-collado@users.sourceforge.net>

	* */webTOC: Fix COPYING omission.

2018-04-08         Manuel Collado       <m-collado@users.sourceforge.net>

	* webTOC: Global rebuild of the home page.
	* Development_web: Fix errata.

2018-04-07         Manuel Collado       <m-collado@users.sourceforge.net>

	* webTOC: Remove extra line.

2018-04-02         Manuel Collado       <m-collado@users.sourceforge.net>

	* Development, README: Reformatted to be processed as markdown.

2018-03-15         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb.sh: Use webTOC in devel source tree if not in input dir.

2018-03-09         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* dirloop.sh: Ignore new _web directory.

2018-03-08         Manuel Collado       <m-collado@users.sourceforge.net>

	* _web/*, makeweb.sh, webTOC: First alpha version of the web generator.
	* Development_web: Instructions for the above.

2018-02-16         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Add new option -I to indicate that
	there is no texinfo documentation, so we don't need to include support
	for that in the rpm spec file. Also, the spec file should now explicitly
	require gcc or gcc-c++ in the build environment.

2018-01-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: For pure extensions, define
	GAWKEXTLIB_NOT_NEEDED to avoid needing gawkextlib.h in the build
	environment.

2017-12-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: In sample man page, use .\" instead of